# pointcloud-to-2dmap-ros

./: CMakeLists.txt  README.md  package.xml
launch/: pointcloud_to_2dmap.launch
scripts/: map_generater.py  pointcloud_to_2dmap_node.py
src/: pointcloud_to_2dmap.cpp
