<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_to_2dmap</name>
  <version>0.0.0</version>
  <description>The pointcloud-to-2dmap package</description>

  <maintainer email="juchajam@gmail.com">juchajam</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
